// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmptyWalletDialog > rendering > should match snapshot with fallback available 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ Usage limit reached for gemini-2.5-pro.                                                          │
│ Access resets at 2:00 PM.                                                                        │
│ /stats model for usage details                                                                   │
│ /model to switch models.                                                                         │
│ /auth to switch to API key.                                                                      │
│                                                                                                  │
│ To continue using this model now, purchase more AI Credits.                                      │
│                                                                                                  │
│ Newly purchased AI credits may take a few minutes to update.                                     │
│                                                                                                  │
│ How would you like to proceed?                                                                   │
│                                                                                                  │
│                                                                                                  │
│ ● 1. Get AI Credits - Open browser to purchase credits                                           │
│   2. Switch to gemini-3-flash-preview                                                            │
│   3. Stop - Abort request                                                                        │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`EmptyWalletDialog > rendering > should match snapshot without fallback 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ Usage limit reached for gemini-2.5-pro.                                                          │
│ /stats model for usage details                                                                   │
│ /model to switch models.                                                                         │
│ /auth to switch to API key.                                                                      │
│                                                                                                  │
│ To continue using this model now, purchase more AI Credits.                                      │
│                                                                                                  │
│ Newly purchased AI credits may take a few minutes to update.                                     │
│                                                                                                  │
│ How would you like to proceed?                                                                   │
│                                                                                                  │
│                                                                                                  │
│ ● 1. Get AI Credits - Open browser to purchase credits                                           │
│   2. Stop - Abort request                                                                        │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;
